--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,13 +3,30 @@ events {
 
 http {
     server {
-        server_name _;
+        server_name node-docker.local;
 
         listen 80;
         listen [::]:80;
 
         location / {
             proxy_pass http://node_service:8000;
+        }
+    }
+    server {
+        server_name php-docker.local;
+        index index.php index.html;
+        root /code;
+        error_log  /var/log/nginx/error.log;
+        access_log /var/log/nginx/access.log;
+
+        location ~ \.php$ {
+          try_files $uri =404;
+          fastcgi_split_path_info ^(.+\.php)(/.+)$;
+          fastcgi_pass php_service:9000;
+          fastcgi_index index.php;
+          include fastcgi_params;
+          fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+          fastcgi_param PATH_INFO $fastcgi_path_info;
         }
     }
 }
