--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,6 +14,7 @@ http {
     }
     server {
         server_name php-docker.local;
+        listen 8080;
         index index.php index.html;
         root /code;
         error_log  /var/log/nginx/error.log;
