--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,7 +8,10 @@ http {
         listen 80;
         listen [::]:80;
 
-        location / {
+        location /endpoint1 {
+            proxy_pass http://node_service:8000;
+        }
+        location /endpoint2 {
             proxy_pass http://node_service:8000;
         }
     }
@@ -17,17 +20,10 @@ http {
         listen 8080;
         index index.php index.html;
         root /code;
-        error_log  /var/log/nginx/error.log;
-        access_log /var/log/nginx/access.log;
-
         location ~ \.php$ {
-          try_files $uri =404;
-          fastcgi_split_path_info ^(.+\.php)(/.+)$;
-          fastcgi_pass php_service:9000;
-          fastcgi_index index.php;
-          include fastcgi_params;
-          fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-          fastcgi_param PATH_INFO $fastcgi_path_info;
+            fastcgi_param REQUEST_METHOD $request_method;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_pass php_service:9000;
         }
     }
 }
